<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>common</name>
    <version>0.1.0</version>
    <description>Common utility functions and constants</description>
    <maintainer email="pgracing.team@gmail.com">PGRacing Team</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>

    <depend>common_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
